src/objects/IEC_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IEC Error Logs</relationshipLabel>
        <relationshipName>IEC_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <description>IEC - data that caused error</description>
        <label>Input Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Displayed_Message__c</fullName>
        <label>Displayed Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Errror_Message__c</fullName>
        <label>Errror Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Information__c</fullName>
        <inlineHelpText>This can be used to log more information on the error like parameters or variables that will help developer trace this issue.</inlineHelpText>
        <label>Extra Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IATACODE__c</fullName>
        <label>IATA Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>Determines the source of the error whether it is a visualforce page or any other apex code</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the log</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IEC Error Log</label>
    <listViews>
        <fullName>DataLoader_GSS_Errors</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Errror_Message__c</columns>
        <columns>Displayed_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>00 - ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SourceProcessSalesOrd</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Errror_Message__c</columns>
        <columns>Source__c</columns>
        <columns>Displayed_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Extra_Information__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>startsWith</operation>
            <value>Order_Svc/processSalesOrderResponse</value>
        </filters>
        <label>Source_processSalesOrderResponse</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Zuora_Synch_Errors</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Type__c</columns>
        <columns>Errror_Message__c</columns>
        <columns>Extra_Information__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Product_Svc/processZProductSaveResult</value>
        </filters>
        <label>Zuora Synch Errors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>IEC Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEC Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>